@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{673, 95}, {857, 1074}}</string>
+	<string>{{729, 98}, {1020, 1054}}</string>
 </dict>
 </plist>
